Fix overflow and improve modal reset in concept mapping
- Remove overflow-x hidden from quadrant-content to allow datatables to be fully visible
- Set modal height to 80vh on page 2 for better space utilization
- Add reactive value to manage file preview data independently
- Reset dropdowns and clear sections when canceling alignment modal
- Improve modal reset logic to clear data before resetting file input

--- a/inst/www/style.css
+++ b/inst/www/style.css
@@ -1051,7 +1051,7 @@ table.dataTable thead tr td .selectize-dropdown .option {
 .quadrant-layout {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 130px);
+  height: calc(100vh - 170px);
   width: 100%;
 }
 
@@ -1111,7 +1111,6 @@ table.dataTable thead tr td .selectize-dropdown .option {
 .quadrant-content {
   flex: 1;
   overflow-y: auto;
-  overflow-x: hidden;
   padding: 15px;
   background: white;
   position: relative;
